# gotify2matrix

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
src/: client.rs  gotify_client.rs  main.rs  session.rs  verify.rs
