[package]
name = "gotify2matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = { version = "0.17", features = ["e2e-encryption"] }
anyhow = "1.0.102"
url = { version = "2.5.8", features = ["serde"]}
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "io-std"] }
serde = "1.0.228"
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rand = "0.10.1"
dirs = "6.0.0"
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.1.2"
futures-util = "0.3.32"
gotify = { version = "0.4.0", features = ["client-core", "manage-messages", "manage-applications", "websocket"] }
handlebars = "6.4.1"
envy = "0.4.2"
