[package]
name = "gotify2matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = { version = "0.18", features = ["e2e-encryption", "bundled-sqlite"] }
anyhow = "1.0.102"
url = { version = "2.5.8", features = ["serde"]}
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "io-std"] }
serde = "1.0.228"
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rand = "0.10.1"
dirs = "6.0.0"
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.1.2"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "tls12"] }
handlebars = "6.4.1"
envy = "0.4.2"

[profile.release]
strip = true
